objects/Lease_Agreement__c/fields/Lease_Status__c.field-meta.xml
<CustomField>
    <fullName>Lease_Status__c</fullName>
    <description>Active while the lease is in effect; automatically flips to Renewal 1 month before the End Date by the Lease End Reminder flow.</description>
    <label>Lease Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>