objects/Lease_Agreement__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Lease Agreements</relationshipLabel>
    <relationshipName>Lease_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>