objects/Lease_Agreement__c/fields/Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true once the end-of-lease reminder email has been sent to the tenant, to prevent duplicate sends.</description>
    <label>Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>