objects/Lease_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Tenant_Contact__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Agreed_Monthly_Rent__c</columns>
    <columns>Lease_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>